# metadev-protocol

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CREDITS.md  README.md  copier.yml  pyproject.toml
.claude/: identity.yaml  settings.json
.claude/agents/: code-reviewer.md  data-analyst.md  devils-advocate.md  test-engineer.md
.claude/rules/: branching.md  code-style.md  linting.md  memory.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  public-alert.yml
.meta/: ARCHITECTURE.md  DECISIONS.md  GUIDELINES.md  HEAD-v1.4.0.sha256  HEAD-v1.4.0.sha256.ots  PILOT.md  SESSION-CONTEXT.md
.meta/active/: brainstorm-2026-04-12-claude-ai-project-starter.md  brainstorm-2026-04-21-memory-rule.md  debate-2026-04-20-hooks-rules-doctrine.md  plan-2026-04-08-launch.md  plan-2026-04-12-outreach.md  plan-2026-04-13-audit-repo-skill.md  plan-2026-04-13-outreach-messages.md  plan-2026-04-13-outreach-tracking.md  plan-2026-04-13-research-skill.md  session-2026-04-20-resume-hooks-rules.md  spec-2026-04-12-outreach-messaging.md  spec-2026-04-12-public-safety.md  spec-2026-04-20-hooks-rules-pairing.md  spec-2026-04-20-research-architecture.md  synthesis-2026-04-20-hooks-rules-audit.md  synthesis-2026-04-21-hard-block-dx-audit.md
.meta/archive/: brainstorm-2026-03-28-v2-architecture.md  brainstorm-2026-03-30-v2-knowledge.md  brainstorm-2026-04-13-radar-skill.md  plan-2026-03-28-v2-roadmap.md  (+30 more)
docs/: BRAND.md  PHILOSOPHY.md  execution-modes.md  public-safety.md
evals/: harness_audit.py
scripts/: audit_public_safety.py  check_git_author.py  check_meta_naming.py  demo.sh  demo.tape  render-diagrams.sh  save_progress_preflight.py  sync_hosts.py  tech_watch.py
skills-pack/: README.md
template/: .gitignore.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  AGENTS.md  AGENTS.md.jinja  CLAUDE.md.jinja  pyproject.toml.jinja  sync-config.yaml
tests/: test_harness_audit.py  test_sync_hosts.py  test_tech_watch_cards.py  test_tech_watch_themes.py  test_template_generation.py
(+154 files in other folders)
