[project]
name = "metadev-protocol"
version = "0.1.0"
description = "Template system for bootstrapping AI-assisted Python projects"
readme = "README.md"
authors = [
    { name = "Vincent", email = "vincent.lamy.33@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "copier>=9.14.1",
    "pre-commit>=4.2.0",
    "pyyaml>=6.0",
    "ruff>=0.11.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pyyaml>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py312"
# Project line-length deviates from common defaults. See .claude/rules/linting.md.
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "BLE"]
# F401 left unfixable so PostToolUse ruff --fix doesn't strip imports mid-edit.
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E501"]
"tests/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
